load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "failers",
    srcs = ["failers.go"],
    importpath = "github.com/cockroachdb/cockroach/pkg/cmd/roachtest/roachtestutil/failers",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/cmd/roachtest/cluster",
        "//pkg/cmd/roachtest/option",
        "//pkg/cmd/roachtest/roachtestutil",
        "//pkg/cmd/roachtest/spec",
        "//pkg/cmd/roachtest/test",
        "//pkg/roachpb",
        "//pkg/roachprod/install",
        "//pkg/roachprod/logger",
        "@com_github_cockroachdb_errors//:errors",
        "@com_github_lib_pq//:pq",
        "@com_github_stretchr_testify//require",
    ],
)
